<resources>
    <string name="app_name" translatable="false">Mercadona Fan Club</string>
    <string name="bottommenu_home">Inicio</string>
    <string name="bottommenu_search">Buscar</string>
    <string name="bottommenu_account">Cuenta</string>
    <string name="api_base_url" translatable="false">https://tienda.mercadona.es/api/</string>
    <string name="user_not_existing">Invitado</string>
    <string name="why_should_create_account">Para poder aportar al Club de Fans de Mercadona, deberás crearte una cuenta. ¡Es muy fácil!</string>
    <string name="indentify">Identifícate</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="hometab_all">En tendencia</string>
    <string name="hometab_priceDrop">Bajadas de precio</string>
    <string name="hometab_newArrivals">Novedades</string>
    <string name="comment_about_product">Comenta sobre el producto...</string>
    <string name="rate_this_product">Puntúa este producto</string>
    <string name="reviews">Valoraciones</string>
    <string name="your_review">Más detalles</string>
    <string name="tell_us_about">Cuéntanos más sobre</string>
    <string name="sample_text_short">Pequeño texto de ejemplo</string>
    <string name="sample_text_long">"Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto Mucho texto "</string>
    <string name="reviews_db_name">reviews</string>
    <string name="singleEntrance_db_name">review</string>
    <string name="login_to_review">Inicia sesión para valorar productos</string>
    <string name="totalReviews">valoraciones totales</string>
    <string name="no_reviews">No hay valoraciones</string>
    <string name="scan">Verifica la compra (opcional)</string>
    <string name="product_non_verified">Compra verificada</string>
    <string name="barcode_not_matching">El código de barras no coincide</string>
    <string name="verified_review">✓ Valoración verificada</string>
    <string name="categories">Categorías</string>
    <string name="go_to_shopping_list">Lista de la compra</string>
    <string name="see">Ver</string>
</resources>