<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAccountUsername"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_not_existing" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/why_should_create_account" />

    <Button
        android:id="@+id/closeSessionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_session" />

</LinearLayout>