<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <RatingBar
        android:id="@+id/ratingBarFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ratingDialogTextLayout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_review"
        app:counterEnabled="true"
        app:counterMaxLength="500"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ratingDialogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textMultiLine"
            android:lines="5" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioButton
        android:id="@+id/rb_product_verified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:clickable="false"
        android:text="@string/product_non_verified" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan" />

</LinearLayout>